--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pgsql-parser",
+  "name": "@div_arora/pgsql-parser",
   "version": "0.0.1",
   "publishConfig": {
     "access": "restricted"
@@ -34,6 +34,6 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/pyramation/pgsql-parser"
+    "url": "https://github.com/darora/pgsql-parser"
   }
 }
