--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "pgsql-parser",
+  "name": "@div_arora/pgsql-parser",
   "version": "13.1.13",
   "description": "The real PostgreSQL query parser",
   "author": "Dan Lynch <pyramation@gmail.com>",
-  "homepage": "https://github.com/pyramation/pgsql-parser",
+  "homepage": "https://github.com/darora/pgsql-parser",
   "license": "SEE LICENSE IN LICENSE",
   "main": "main/index.js",
   "module": "module/index.js",
@@ -32,7 +32,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/pyramation/pgsql-parser"
+    "url": "https://github.com/darora/pgsql-parser"
   },
   "scripts": {
     "build:main": "cross-env BABEL_ENV=production babel src --out-dir main --delete-dir-on-start",
@@ -47,7 +47,7 @@
     "test:debug": "node --inspect node_modules/.bin/jest --runInBand"
   },
   "bugs": {
-    "url": "https://github.com/pyramation/pgsql-parser/issues"
+    "url": "https://github.com/darora/pgsql-parser/issues"
   },
   "devDependencies": {
     "@babel/cli": "7.11.6",
